# dcache

./: .gitignore  .gitlab-ci.yml  BUILDING.md  CITATION.cff  CONTRIBUTING.md  ChangeLog  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.am  Makefile.sgi  PnfsNameSpaceProvider.java  README  README.md  build.properties  build.xml  commit-msg  configure.ac  dcache-completion  dcache-dcap.spec  dcache-dcap.spec.in  dcap.c  dcap.spec.in  dcap_command.c  dcap_errno.h  dcap_poll.h  dcap_preload.c  dcap_protocol.c  dcap_read.c  dcap_url.h  dcap_version.c  debug_map.h  generate-jacoco-report.sh  get-jacoco.sh  getopt.c  http-client.private.env.json  intellij-java-google-dcache-style.xml  mydocu.txt  patch.build  pom.xml  pom.xml.orig  (+3 more)
.ci/: bulkRequestsEndpoint.http  custom-helm-config.yaml  cvmfs-storageclass.yaml  cvmfs-volume-storageclass-pvc.yaml  dcache-service.yml  deploy-docs.sh  dummy-hsm.sh  frontend.yaml  generate-changelog.sh  generate-releases-xml.sh  get-git-version.sh  init-el9-ui.sh  init-grid-ui.sh  init-s2.sh  keycloack-deployment.yaml  labelsEndpoint.http  labelsWebdavEndpoint.http  migration.yaml  migrationEndpoint.http  poolEndpoint.http  qos-policy.http  qos-policyEndpoint.http  qosEndpoint.http  qosPolicyEndpoint.http  run-grid-tests.sh  run-oidc-test.sh  run-s2.sh  run-webdav-tests.sh  run-xroot-tests.sh  s2-runner.yaml  spacemanagerEndpoint.http  use-case-diskandtape.http  use-case-to-tape.http  userEndpoint.http  values-cvmfs.yaml  webdav-wn-cvmfs.yaml  wn-with-cvmfs-xroot.yaml  wn-with-cvmfs.yaml
.ci-k8s/: dcache-service.yml  postgresql-service.yml  zookeeper.yml
.github/: copilot-instructions.md
1.9/: build.xml
1.9.5/: README  build.properties  build.xml  release.properties
acl/: readme.txt
archetypes/: pom.xml
common/: common.xml  cvs.properties  deb.properties  fhs-layout.properties  javac.properties  opt-layout.properties  rpms.properties
docs/: pom.xml
man/: dccp.1
modules-builds/: cells-build.xml  common-build.xml  cpd-build.xml  dcache-core-build.xml  dcap-build.xml  dcap-rpm-build.xml  deb.properties  findbugs-build.xml  gplazma-build.xml  (+15 more)
modules/dcap/: AUTHORS  ChangeLog  INSTALL  Makefile.alpha  Makefile.am  Makefile.inc  Makefile.linux  Makefile.sun  Makefile.w32  README  array.h  bootstrap.sh  build.xml  configure.ac  dc_job_hack.c  dcache-dcap.spec  dcache-dcap.spec.in  dcap-epel.spec  dcap.c  dcap.h.in  dcap.spec.in  dcap_accept.c  dcap_checksum.c  dcap_chown.c  dcap_close.c  dcap_command.c  dcap_command.h  dcap_debug.c  dcap_error.c  dcap_interpreter.c  dcap_open.c  dcap_poll.c  dcap_preload.c  dcap_preload64.c  dcap_protocol.h  dcap_read.c  dcap_shared.h  dcap_signal.h  dcap_stat.c  dcap_stream.c  (+20 more)
modules/dcap/man/: dccp.1
modules/dcap/patches/2.47.6/: dcap-aliasing.patch
modules/dcap/plugins/: Makefile.am
modules/dcap/plugins/gssapi/: Makefile.am  base64.c  base64.h  client.c  gssIoTunnel.c  server.c
modules/dcap/plugins/javatunnel/: Args.java  Base64.java  Convertable.java  GsiTunnel.java  GssTunnel.java  NetRolesServerSocket.java  NetRolesSocket.java  SSLTunnelSocket.java  SelfTest.java  TunnelConverter.java  TunnelInputStream.java  TunnelServerSocket.java  TunnelServerSocketCreator.java  TunnelSocket.java  UserBindible.java
modules/dcap/plugins/ssl/: Makefile.am  sslTunnel.c  user.c
modules/dcap/plugins/telnet/: Makefile.am  README  telnetTunnel.c  user.c
modules/dcap/security_plugins/: Makefile.am
modules/dcap/security_plugins/gssapi/: Makefile  Makefile.gsi  Makefile.gsi-ia64  Makefile.gss  Makefile.gss-ia64  gssIoTunnel.c
modules/dcap/security_plugins/javatunnel/: Base64.java  Convertable.java  GsiTunnel.java  GssTunnel.java  SSLTunnelServerSocket.java  SSLTunnelSocket.java  SelfTest.java  TunnelConverter.java  TunnelInputStream.java  TunnelOutputStream.java  TunnelServerSocket.java  TunnelServerSocketCreator.java  TunnelSocket.java  UserBindible.java  sec2.conf
modules/dcap/security_plugins/ssl/: Makefile
modules/dcap/security_plugins/telnet/: Makefile  README  dcapPasswd.c  passwd4dCapDoor.example
modules/dcap/src/: Makefile.am  adler32.c  array.h  br.c  char2crc.c  char2crc.h  currentThread.c  dc_check  dc_stage  dcap.c  dcap.dsp  dcap.dsw  dcap.h.in  dcap_accept.c  dcap_accept.h  dcap_access.c  dcap_acl.c  dcap_ahead.c  dcap_ahead.h  dcap_checksum.c  dcap_checksum.h  dcap_chmod.c  dcap_chown.c  dcap_close.c  dcap_command.c  dcap_debug.c  dcap_debug.h  dcap_dirent.c  dcap_error.c  dcap_error.h  dcap_fsync.h  dcap_functions.h  dcap_interpreter.c  dcap_lcb.h  dcap_lib.dsp  dcap_lseek.c  dcap_lseek.h  dcap_mkdir.c  dcap_mqueue.c  dcap_mqueue.h  (+62 more)
modules/dcap/src/tests/: Makefile
modules/dcap/src/tests/uri/: Makefile  dcap-bad-1.expected  dcap-bad-2.expected  dcap-good-2.expected  dcap-good-2.src  gsidcap-good-1.expected
modules/srm-client/srmTools/: AUTHORS  AUTHORS.gsiPlugin  INSTALL.gsiPlugin  Makefile.am  README.gsiPlugin  SrmGetOpt-t.cpp  SrmSoapWsClient-t.cpp  SrmWsClientConfig-t.cpp  SrmWsClientConfig.cpp  SrmWsClientConfig.hpp  config.xml.in  configure.in  managerv1.c  managerv1.h  soapcpp2  srmImpl.cpp  srmconfig.full.xml.in  srmconfig.xml.in  stdsoap2.cpp  url-t.cpp  url.cpp
plugins/gssapi/: Copyright  Makefile.am  base64.h  gssIoTunnel.c  gssTunnel.h  server.c  tunnelQueue.c  util.c  util.h
plugins/ssl/: Makefile  Makefile.am  user.c
plugins/telnet/: Makefile.am  dcapPasswd.c  telnetTunnel.c
src/: Makefile.am  array.c  br.c  dc_hack.h  dc_job_hack.c  dcap.c  dcap.dsp  dcap.h.in  dcap_accept.c  dcap_access.c  dcap_acl.c  dcap_ahead.c  dcap_ahead.h  dcap_checksum.c  dcap_checksum.h  dcap_chmod.c  dcap_close.c  dcap_close.h  dcap_command.h  dcap_debug.c  dcap_debug.h  dcap_dirent.c  dcap_dup.c  dcap_errno.h  dcap_error.c  dcap_error.h  dcap_fsync.c  dcap_interpreter.h  dcap_lcb.c  dcap_lib.dsp  dcap_lseek.c  dcap_nodes.h  dcap_open.c  dcap_poll.c  dcap_poll.h  dcap_preload.c  dcap_preload64.c  dcap_protocol.c  dcap_protocol.h  dcap_read.c  (+55 more)
src/tests/uri/: dcap-bad-1.src  dcap-bad-2.src  dcap-good-1.expected  dcap-good-1.src  gsidcap-good-1.src  pnfs-good-1.expected  pnfs-good-1.src
(+13967 files in other folders)
